src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    COMMENT
    CONST
    DO
    DOT
    FALSE
    FOREACH
    MOD
    MULTILINECOMMENT
    NEW
    NOT
    PRIVATE
    PUBLIC
    THEN
    TRUE
    VOID

Grammar

Rule 0     S' -> programstart
Rule 1     programstart -> PROGRAM ID LBRACE code RBRACE
Rule 2     code -> statement
Rule 3     code -> code statement
Rule 4     statement -> assignment STMT_TERMINATOR
Rule 5     statement -> declaration STMT_TERMINATOR
Rule 6     statement -> expression STMT_TERMINATOR
Rule 7     statement -> if_statement
Rule 8     statement -> while_statement
Rule 9     statement -> for_statement
Rule 10    statement -> array_declaration STMT_TERMINATOR
Rule 11    statement -> array_assignment STMT_TERMINATOR
Rule 12    statement -> write_statement
Rule 13    statement -> writeln_statement
Rule 14    statement -> break_statement
Rule 15    statement -> return_statement
Rule 16    declaration -> datatype declareid
Rule 17    declareid -> ID
Rule 18    declareid -> assignment
Rule 19    declareid -> declareid COMMA ID
Rule 20    declareid -> declareid COMMA assignment
Rule 21    assignment -> ID EQUAL expression
Rule 22    assignment -> ID PLUSEQUAL expression
Rule 23    assignment -> ID MINUSEQUAL expression
Rule 24    datatype -> INT
Rule 25    datatype -> FLOAT
Rule 26    datatype -> BOOL
Rule 27    datatype -> CHAR
Rule 28    datatype -> DOUBLE
Rule 29    datatype -> LONG
Rule 30    datatype -> STRING
Rule 31    expression -> expression PLUS term
Rule 32    expression -> expression MINUS term
Rule 33    expression -> term
Rule 34    term -> term MULT factor
Rule 35    term -> term DIVIDE factor
Rule 36    term -> factor
Rule 37    factor -> ID
Rule 38    factor -> INTCONST
Rule 39    factor -> FLOATCONST
Rule 40    factor -> DOUBLECONST
Rule 41    factor -> LONGCONST
Rule 42    factor -> BOOLCONST
Rule 43    factor -> STRCONST
Rule 44    factor -> CHARCONST
Rule 45    factor -> array_access
Rule 46    factor -> LPAREN expression RPAREN
Rule 47    expression -> expression LT expression
Rule 48    expression -> expression GT expression
Rule 49    expression -> expression LE expression
Rule 50    expression -> expression GE expression
Rule 51    expression -> expression NE expression
Rule 52    expression -> expression BOOLEQUAL expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> ID INCREMENT
Rule 56    expression -> ID DECREMENT
Rule 57    assignment -> ID INCREMENT STMT_TERMINATOR
Rule 58    assignment -> ID DECREMENT STMT_TERMINATOR
Rule 59    expression -> expression ARROW ID
Rule 60    if_statement -> IF LPAREN expression RPAREN LBRACE code RBRACE
Rule 61    if_statement -> IF LPAREN expression RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
Rule 62    while_statement -> WHILE LPAREN expression RPAREN LBRACE code RBRACE
Rule 63    for_statement -> FOR LPAREN assignment STMT_TERMINATOR expression STMT_TERMINATOR expression RPAREN LBRACE code RBRACE
Rule 64    arguments -> expression
Rule 65    arguments -> arguments COMMA expression
Rule 66    arguments -> empty
Rule 67    array_declaration -> datatype ID LBRACKET INTCONST RBRACKET
Rule 68    array_assignment -> ID LBRACKET expression RBRACKET EQUAL expression
Rule 69    array_access -> ID LBRACKET expression RBRACKET
Rule 70    write_statement -> WRITE LPAREN expression RPAREN STMT_TERMINATOR
Rule 71    writeln_statement -> WRITELN LPAREN expression RPAREN STMT_TERMINATOR
Rule 72    break_statement -> BREAK STMT_TERMINATOR
Rule 73    return_statement -> RETURN expression STMT_TERMINATOR
Rule 74    return_statement -> RETURN STMT_TERMINATOR
Rule 75    empty -> <empty>

Terminals, with rules where they appear

AND                  : 53
ARROW                : 59
BOOL                 : 26
BOOLCONST            : 42
BOOLEQUAL            : 52
BREAK                : 72
CHAR                 : 27
CHARCONST            : 44
COLON                : 
COMMA                : 19 20 65
COMMENT              : 
CONST                : 
DECREMENT            : 56 58
DIVIDE               : 35
DO                   : 
DOT                  : 
DOUBLE               : 28
DOUBLECONST          : 40
ELSE                 : 61
EQUAL                : 21 68
FALSE                : 
FLOAT                : 25
FLOATCONST           : 39
FOR                  : 63
FOREACH              : 
GE                   : 50
GT                   : 48
ID                   : 1 17 19 21 22 23 37 55 56 57 58 59 67 68 69
IF                   : 60 61
INCREMENT            : 55 57
INT                  : 24
INTCONST             : 38 67
LBRACE               : 1 60 61 61 62 63
LBRACKET             : 67 68 69
LE                   : 49
LONG                 : 29
LONGCONST            : 41
LPAREN               : 46 60 61 62 63 70 71
LT                   : 47
MINUS                : 32
MINUSEQUAL           : 23
MOD                  : 
MULT                 : 34
MULTILINECOMMENT     : 
NE                   : 51
NEW                  : 
NOT                  : 
OR                   : 54
PLUS                 : 31
PLUSEQUAL            : 22
PRIVATE              : 
PROGRAM              : 1
PUBLIC               : 
RBRACE               : 1 60 61 61 62 63
RBRACKET             : 67 68 69
RETURN               : 73 74
RPAREN               : 46 60 61 62 63 70 71
STMT_TERMINATOR      : 4 5 6 10 11 57 58 63 63 70 71 72 73 74
STRCONST             : 43
STRING               : 30
THEN                 : 
TRUE                 : 
VOID                 : 
WHILE                : 62
WRITE                : 70
WRITELN              : 71
error                : 

Nonterminals, with rules where they appear

arguments            : 65
array_access         : 45
array_assignment     : 11
array_declaration    : 10
assignment           : 4 18 20 63
break_statement      : 14
code                 : 1 3 60 61 61 62 63
datatype             : 16 67
declaration          : 5
declareid            : 16 19 20
empty                : 66
expression           : 6 21 22 23 31 32 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 59 60 61 62 63 63 64 65 68 68 69 70 71 73
factor               : 34 35 36
for_statement        : 9
if_statement         : 7
programstart         : 0
return_statement     : 15
statement            : 2 3
term                 : 31 32 33 34 35
while_statement      : 8
write_statement      : 12
writeln_statement    : 13

Parsing method: LALR

state 0

    (0) S' -> . programstart
    (1) programstart -> . PROGRAM ID LBRACE code RBRACE

    PROGRAM         shift and go to state 2

    programstart                   shift and go to state 1

state 1

    (0) S' -> programstart .



state 2

    (1) programstart -> PROGRAM . ID LBRACE code RBRACE

    ID              shift and go to state 3


state 3

    (1) programstart -> PROGRAM ID . LBRACE code RBRACE

    LBRACE          shift and go to state 4


state 4

    (1) programstart -> PROGRAM ID LBRACE . code RBRACE
    (2) code -> . statement
    (3) code -> . code statement
    (4) statement -> . assignment STMT_TERMINATOR
    (5) statement -> . declaration STMT_TERMINATOR
    (6) statement -> . expression STMT_TERMINATOR
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . for_statement
    (10) statement -> . array_declaration STMT_TERMINATOR
    (11) statement -> . array_assignment STMT_TERMINATOR
    (12) statement -> . write_statement
    (13) statement -> . writeln_statement
    (14) statement -> . break_statement
    (15) statement -> . return_statement
    (21) assignment -> . ID EQUAL expression
    (22) assignment -> . ID PLUSEQUAL expression
    (23) assignment -> . ID MINUSEQUAL expression
    (57) assignment -> . ID INCREMENT STMT_TERMINATOR
    (58) assignment -> . ID DECREMENT STMT_TERMINATOR
    (16) declaration -> . datatype declareid
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LE expression
    (50) expression -> . expression GE expression
    (51) expression -> . expression NE expression
    (52) expression -> . expression BOOLEQUAL expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . ID INCREMENT
    (56) expression -> . ID DECREMENT
    (59) expression -> . expression ARROW ID
    (60) if_statement -> . IF LPAREN expression RPAREN LBRACE code RBRACE
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
    (62) while_statement -> . WHILE LPAREN expression RPAREN LBRACE code RBRACE
    (63) for_statement -> . FOR LPAREN assignment STMT_TERMINATOR expression STMT_TERMINATOR expression RPAREN LBRACE code RBRACE
    (67) array_declaration -> . datatype ID LBRACKET INTCONST RBRACKET
    (68) array_assignment -> . ID LBRACKET expression RBRACKET EQUAL expression
    (70) write_statement -> . WRITE LPAREN expression RPAREN STMT_TERMINATOR
    (71) writeln_statement -> . WRITELN LPAREN expression RPAREN STMT_TERMINATOR
    (72) break_statement -> . BREAK STMT_TERMINATOR
    (73) return_statement -> . RETURN expression STMT_TERMINATOR
    (74) return_statement -> . RETURN STMT_TERMINATOR
    (24) datatype -> . INT
    (25) datatype -> . FLOAT
    (26) datatype -> . BOOL
    (27) datatype -> . CHAR
    (28) datatype -> . DOUBLE
    (29) datatype -> . LONG
    (30) datatype -> . STRING
    (34) term -> . term MULT factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . ID
    (38) factor -> . INTCONST
    (39) factor -> . FLOATCONST
    (40) factor -> . DOUBLECONST
    (41) factor -> . LONGCONST
    (42) factor -> . BOOLCONST
    (43) factor -> . STRCONST
    (44) factor -> . CHARCONST
    (45) factor -> . array_access
    (46) factor -> . LPAREN expression RPAREN
    (69) array_access -> . ID LBRACKET expression RBRACKET

    ID              shift and go to state 5
    IF              shift and go to state 22
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    WRITE           shift and go to state 27
    WRITELN         shift and go to state 28
    BREAK           shift and go to state 29
    RETURN          shift and go to state 30
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    BOOL            shift and go to state 33
    CHAR            shift and go to state 34
    DOUBLE          shift and go to state 35
    LONG            shift and go to state 36
    STRING          shift and go to state 37
    INTCONST        shift and go to state 26
    FLOATCONST      shift and go to state 39
    DOUBLECONST     shift and go to state 40
    LONGCONST       shift and go to state 41
    BOOLCONST       shift and go to state 42
    STRCONST        shift and go to state 43
    CHARCONST       shift and go to state 44
    LPAREN          shift and go to state 23

    code                           shift and go to state 6
    statement                      shift and go to state 7
    assignment                     shift and go to state 8
    declaration                    shift and go to state 9
    expression                     shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    for_statement                  shift and go to state 13
    array_declaration              shift and go to state 14
    array_assignment               shift and go to state 15
    write_statement                shift and go to state 16
    writeln_statement              shift and go to state 17
    break_statement                shift and go to state 18
    return_statement               shift and go to state 19
    datatype                       shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 38
    array_access                   shift and go to state 45

state 5

    (21) assignment -> ID . EQUAL expression
    (22) assignment -> ID . PLUSEQUAL expression
    (23) assignment -> ID . MINUSEQUAL expression
    (57) assignment -> ID . INCREMENT STMT_TERMINATOR
    (58) assignment -> ID . DECREMENT STMT_TERMINATOR
    (55) expression -> ID . INCREMENT
    (56) expression -> ID . DECREMENT
    (68) array_assignment -> ID . LBRACKET expression RBRACKET EQUAL expression
    (37) factor -> ID .
    (69) array_access -> ID . LBRACKET expression RBRACKET

    EQUAL           shift and go to state 46
    PLUSEQUAL       shift and go to state 47
    MINUSEQUAL      shift and go to state 48
    INCREMENT       shift and go to state 49
    DECREMENT       shift and go to state 50
    LBRACKET        shift and go to state 51
    MULT            reduce using rule 37 (factor -> ID .)
    DIVIDE          reduce using rule 37 (factor -> ID .)
    STMT_TERMINATOR reduce using rule 37 (factor -> ID .)
    PLUS            reduce using rule 37 (factor -> ID .)
    MINUS           reduce using rule 37 (factor -> ID .)
    LT              reduce using rule 37 (factor -> ID .)
    GT              reduce using rule 37 (factor -> ID .)
    LE              reduce using rule 37 (factor -> ID .)
    GE              reduce using rule 37 (factor -> ID .)
    NE              reduce using rule 37 (factor -> ID .)
    BOOLEQUAL       reduce using rule 37 (factor -> ID .)
    AND             reduce using rule 37 (factor -> ID .)
    OR              reduce using rule 37 (factor -> ID .)
    ARROW           reduce using rule 37 (factor -> ID .)


state 6

    (1) programstart -> PROGRAM ID LBRACE code . RBRACE
    (3) code -> code . statement
    (4) statement -> . assignment STMT_TERMINATOR
    (5) statement -> . declaration STMT_TERMINATOR
    (6) statement -> . expression STMT_TERMINATOR
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . for_statement
    (10) statement -> . array_declaration STMT_TERMINATOR
    (11) statement -> . array_assignment STMT_TERMINATOR
    (12) statement -> . write_statement
    (13) statement -> . writeln_statement
    (14) statement -> . break_statement
    (15) statement -> . return_statement
    (21) assignment -> . ID EQUAL expression
    (22) assignment -> . ID PLUSEQUAL expression
    (23) assignment -> . ID MINUSEQUAL expression
    (57) assignment -> . ID INCREMENT STMT_TERMINATOR
    (58) assignment -> . ID DECREMENT STMT_TERMINATOR
    (16) declaration -> . datatype declareid
    (31) expression -> . expression PLUS term
    (32) expression -> . expression MINUS term
    (33) expression -> . term
    (47) expression -> . expression LT expression
    (48) expression -> . expression GT expression
    (49) expression -> . expression LE expression
    (50) expression -> . expression GE expression
    (51) expression -> . expression NE expression
    (52) expression -> . expression BOOLEQUAL expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . ID INCREMENT
    (56) expression -> . ID DECREMENT
    (59) expression -> . expression ARROW ID
    (60) if_statement -> . IF LPAREN expression RPAREN LBRACE code RBRACE
    (61) if_statement -> . IF LPAREN expression RPAREN LBRACE code RBRACE ELSE LBRACE code RBRACE
    (62) while_statement -> . WHILE LPAREN expression RPAREN LBRACE code RBRACE
    (63) for_statement -> . FOR LPAREN assignment STMT_TERMINATOR expression STMT_TERMINATOR expression RPAREN LBRACE code RBRACE
    (67) array_declaration -> . datatype ID LBRACKET INTCONST RBRACKET
    (68) array_assignment -> . ID LBRACKET expression RBRACKET EQUAL expression
    (70) write_statement -> . WRITE LPAREN expression RPAREN STMT_TERMINATOR
    (71) writeln_statement -> . WRITELN LPAREN expression RPAREN STMT_TERMINATOR
    (72) break_statement -> . BREAK STMT_TERMINATOR
    (73) return_statement -> . RETURN expression STMT_TERMINATOR
    (74) return_statement -> . RETURN STMT_TERMINATOR
    (24) datatype -> . INT
    (25) datatype -> . FLOAT
    (26) datatype -> . BOOL
    (27) datatype -> . CHAR
    (28) datatype -> . DOUBLE
    (29) datatype -> . LONG
    (30) datatype -> . STRING
    (34) term -> . term MULT factor
    (35) term -> . term DIVIDE factor
    (36) term -> . factor
    (37) factor -> . ID
    (38) factor -> . INTCONST
    (39) factor -> . FLOATCONST
    (40) factor -> . DOUBLECONST
    (41) factor -> . LONGCONST
    (42) factor -> . BOOLCONST
    (43) factor -> . STRCONST
    (44) factor -> . CHARCONST
    (45) factor -> . array_access
    (46) factor -> . LPAREN expression RPAREN
    (69) array_access -> . ID LBRACKET expression RBRACKET

    RBRACE          shift and go to state 52
    ID              shift and go to state 5
    IF              shift and go to state 22
    WHILE           shift and go to state 24
    FOR             shift and go to state 25
    WRITE           shift and go to state 27
    WRITELN         shift and go to state 28
    BREAK           shift and go to state 29
    RETURN          shift and go to state 30
    INT             shift and go to state 31
    FLOAT           shift and go to state 32
    BOOL            shift and go to state 33
    CHAR            shift and go to state 34
    DOUBLE          shift and go to state 35
    LONG            shift and go to state 36
    STRING          shift and go to state 37
    INTCONST        shift and go to state 26
    FLOATCONST      shift and go to state 39
    DOUBLECONST     shift and go to state 40
    LONGCONST       shift and go to state 41
    BOOLCONST       shift and go to state 42
    STRCONST        shift and go to state 43
    CHARCONST       shift and go to state 44
    LPAREN          shift and go to state 23

    statement                      shift and go to state 53
    assignment                     shift and go to state 8
    declaration                    shift and go to state 9
    expression                     shift and go to state 10
    if_statement                   shift and go to state 11
    while_statement                shift and go to state 12
    for_statement                  shift and go to state 13
    array_declaration              shift and go to state 14
    array_assignment               shift and go to state 15
    write_statement                shift and go to state 16
    writeln_statement              shift and go to state 17
    break_statement                shift and go to state 18
    return_statement               shift and go to state 19
    datatype                       shift and go to state 20
    term                           shift and go to state 21
    factor                         shift and go to state 38
    array_access                   shift and go to state 45

state 7

    (2) code -> statement .

    RBRACE          reduce using rule 2 (code -> statement .)
    ID              reduce using rule 2 (code -> statement .)
    IF              reduce using rule 2 (code -> statement .)
    WHILE           reduce using rule 2 (code -> statement .)
    FOR             reduce using rule 2 (code -> statement .)
    WRITE           reduce using rule 2 (code -> statement .)
    WRITELN         reduce using rule 2 (code -> statement .)
    BREAK           reduce using rule 2 (code -> statement .)
    RETURN          reduce using rule 2 (code -> statement .)
    INT             reduce using rule 2 (code -> statement .)
    FLOAT           reduce using rule 2 (code -> statement .)
    BOOL            reduce using rule 2 (code -> statement .)
    CHAR            reduce using rule 2 (code -> statement .)
    DOUBLE          reduce using rule 2 (code -> statement .)
    LONG            reduce using rule 2 (code -> statement .)
    STRING          reduce using rule 2 (code -> statement .)
    INTCONST        reduce using rule 2 (code -> statement .)
    FLOATCONST      reduce using rule 2 (code -> statement .)
    DOUBLECONST     reduce using rule 2 (code -> statement .)
    LONGCONST       reduce using rule 2 (code -> statement .)
    BOOLCONST       reduce using rule 2 (code -> statement .)
    STRCONST        reduce using rule 2 (code -> statement .)
    CHARCONST       reduce using rule 2 (code -> statement .)
    LPAREN          reduce using rule 2 (code -> statement .)


state 8

    (4) statement -> assignment . STMT_TERMINATOR

    STMT_TERMINATOR shift and go to state 54


state 9

    (5) statement -> declaration . STMT_TERMINATOR

    STMT_TERMINATOR shift and go to state 55


state 10

    (6) statement -> expression . STMT_TERMINATOR
    (31) expression -> expression . PLUS term
    (32) expression -> expression . MINUS term
    (47) expression -> expression . LT expression
    (48) expression -> expression . GT expression
    (49) expression -> expression . LE expression
    (50) expression -> expression . GE expression
    (51) expression -> expression . NE expression
    (52) expression -> expression . BOOLEQUAL expression
    (53) expression -> expression . AND expression
    (54) expression -> expression . OR expression
    (59) expression -> expression . ARROW ID

    STMT_TERMINATOR shift and go to state 56
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58
    LT              shift and go to state 59
    GT              shift and go to state 60
    LE              shift and go to state 61
    GE              shift and go to state 62
    NE              shift and go to state 63
    BOOLEQUAL       shift and go to state 64
    AND             shift and go to state 65
    OR              shift and go to state 66
    ARROW           shift and go to state 67


state 11

    (7) statement -> if_statement .

    RBRACE          reduce using rule 7 (statement -> if_statement .)
    ID              reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    FOR             reduce using rule 7 (statement -> if_statement .)
    WRITE           reduce using rule 7 (statement -> if_statement .)
    WRITELN         reduce using rule 7 (statement -> if_statement .)
    BREAK           reduce using rule 7 (statement -> if_statement .)
    RETURN          reduce using rule 7 (statement -> if_statement .)
    INT             reduce using rule 7 (statement -> if_statement .)
    FLOAT           reduce using rule 7 (statement -> if_statement .)
    BOOL            reduce using rule 7 (statement -> if_statement .)
    CHAR            reduce using rule 7 (statement -> if_statement .)
    DOUBLE          reduce using rule 7 (statement -> if_statement .)
    LONG            reduce using rule 7 (statement -> if_statement .)
    STRING          reduce using rule 7 (statement -> if_statement .)
    INTCONST        reduce using rule 7 (statement -> if_statement .)
    FLOATCONST      reduce using rule 7 (statement -> if_statement .)
    DOUBLECONST     reduce using rule 7 (statement -> if_statement .)
    LONGCONST       reduce using rule 7 (statement -> if_statement .)
    BOOLCONST       reduce using rule 7 (statement -> if_statement .)
    STRCONST        reduce using rule 7 (statement -> if_statement .)
    CHARCONST       reduce using rule 7 (statement -> if_statement .)
    LPAREN          reduce using rule 7 (statement -> if_statement .)


state 12

    (8) statement -> while_statement .

    RBRACE          reduce using rule 8 (statement -> while_statement .)
    ID              reduce using rule 8 (statement -> while_statement .)
    IF              reduce using rule 8 (statement -> while_statement .)
    WHILE           reduce using rule 8 (statement -> while_statement .)
    FOR             reduce using rule 8 (statement -> while_statement .)
    WRITE           reduce using rule 8 (statement -> while_statement .)
    WRITELN         reduce using rule 8 (statement -> while_statement .)
    BREAK           reduce using rule 8 (statement -> while_statement .)
    RETURN          reduce using rule 8 (statement -> while_statement .)
    INT             reduce using rule 8 (statement -> while_statement .)
    FLOAT           reduce using rule 8 (statement -> while_statement .)
    BOOL            reduce using rule 8 (statement -> while_statement .)
    CHAR            reduce using rule 8 (statement -> while_statement .)
    DOUBLE          reduce using rule 8 (statement -> while_statement .)
    LONG            reduce using rule 8 (statement -> while_statement .)
    STRING          reduce using rule 8 (statement -> while_statement .)
    INTCONST        reduce using rule 8 (statement -> while_statement .)
    FLOATCONST      reduce using rule 8 (statement -> while_statement .)
    DOUBLECONST     reduce using rule 8 (statement -> while_statement .)
    LONGCONST       reduce using rule 8 (statement -> while_statement .)
    BOOLCONST       reduce using rule 8 (statement -> while_statement .)
    STRCONST        reduce using rule 8 (statement -> while_statement .)
    CHARCONST       reduce using rule 8 (statement -> while_statement .)
    LPAREN          reduce using rule 8 (statement -> while_statement .)


state 13

    (9) statement -> for_statement .

    RBRACE          reduce using rule 9 (statement -> for_statement .)
    ID              reduce using rule 9 (statement -> for_statement .)
    IF              reduce using rule 9 (statement -> for_statement .)
    WHILE           reduce using rule 9 (statement -> for_statement .)
    FOR             reduce using rule 9 (statement -> for_statement .)
    WRITE           reduce using rule 9 (statement -> for_statement .)
    WRITELN         reduce using rule 9 (statement -> for_statement .)
    BREAK           reduce using rule 9 (statement -> for_statement .)
    RETURN          reduce using rule 9 (statement -> for_statement .)
    INT             reduce using rule 9 (statement -> for_statement .)
    FLOAT           reduce using rule 9 (statement -> for_statement .)
    BOOL            reduce using rule 9 (statement -> for_statement .)
    CHAR            reduce using rule 9 (statement -> for_statement .)
    DOUBLE          reduce using rule 9 (statement -> for_statement .)
    LONG            reduce using rule 9 (statement -> for_statement .)
    STRING          reduce using rule 9 (statement -> for_statement .)
    INTCONST        reduce using rule 9 (statement -> for_statement .)
    FLOATCONST      reduce using rule 9 (statement -> for_statement .)
    DOUBLECONST     reduce using rule 9 (statement -> for_statement .)
    LONGCONST       reduce using rule 9 (statement -> for_statement .)
    BOOLCONST       reduce using rule 9 (statement -> for_statement .)
    STRCONST        reduce using rule 9 (statement -> for_statement .)
    CHARCONST       reduce using rule 9 (statement -> for_statement .)
    LPAREN          reduce using rule 9 (statement -> for_statement .)


state 14

    (10) statement -> array_declaration . STMT_TERMINATOR

    STMT_TERMINATOR shift and go to state 68


state 15

    (11) statement -> array_assignment . STMT_TERMINATOR

    STMT_TERMINATOR shift and go to state 69


state 16

    (12) statement -> write_statement .
